# hate-speech-detection

./: .gitignore  docker-compose.yml  main.py  pyproject.toml
services/mlflow/: Dockerfile  pyproject.toml
